--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,9 @@ code {
 * {
   box-sizing: border-box;
 }
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
