--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,7 @@ input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+#snackbarLoginTiggerr>div {
+  background: transparent !important;
+}
