--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,8 @@ code {
 
 * {
   box-sizing: border-box;
+  scroll-behavior: smooth;
+    -webkit-overflow-scrolling: touch;
 }
 
 input[type=number]::-webkit-inner-spin-button,
