Posts saved in local storage and showing refresh button

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ code {
 * {
   box-sizing: border-box;
   scroll-behavior: smooth;
-    -webkit-overflow-scrolling: touch;
+  -webkit-overflow-scrolling: touch;
 }
 
 input[type=number]::-webkit-inner-spin-button,
@@ -26,4 +26,8 @@ input[type=number]::-webkit-outer-spin-button {
 
 #snackbarLoginTiggerr>div {
   background: transparent !important;
+}
+
+.MuiSnackbarContent-message {
+  margin: 0 auto !important;
 }
