--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,9 @@ input[type=number]::-webkit-outer-spin-button {
 .MuiSnackbarContent-message {
   margin: 0 auto !important;
 }
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
